fixed visible slider

--- a/css/style.css
+++ b/css/style.css
@@ -417,10 +417,10 @@ label, input {
 }
 
 .accessibility {
-	margin-left: 999px;
 	position: absolute;
 	height: 1px;
 	width: 1px;
+	left: -900em;
 }
 
 
